# repro-bzlmod-module-extension-cycle

./: README.md
module_a/: .bazelrc  MODULE.bazel  extension_1.bzl  extension_2.bzl  extensions.bzl  write_file.bzl
module_b/: .bazelrc  MODULE.bazel
